apps/management/monica/chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monica
  labels:
    app: monica
    scope: management
spec:
  selector:
    matchLabels:
      app: monica
  template:
    metadata:
      labels:
        app: monica
        scope: management
    spec:
      containers:
      - name: monica
        image: monica
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
