apps/management/monica/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monica
  labels:
    app: monica
    scope: management
  namespace: management
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: monica.joaovitor.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: monica
              port: 
                number: 80
